--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iDragon - JavaScript Game</title>
+    <title>Dice in space  - JavaScript Game</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -15,6 +15,7 @@
         <div class="gameOver">Dice in Space
 
         </div>
+    
         <img class="diceImg" id="dice" src="dice1.png" onclick="roll()">
         <!-- <div class="gameOver">Welcome to iDragon - Created by Harry</div> -->
         <div class="dino"></div>
